--- a/charts/mysqldump/templates/gcpserviceaccount.yaml
+++ b/charts/mysqldump/templates/gcpserviceaccount.yaml
@@ -14,4 +14,4 @@ spec:
   - resource: buckets/{{ index (splitList "/" (.Values.upload.googlestoragebucket.bucketname | replace "gs://" "")) 0  }}
     roles:
     - roles/storage.objectAdmin
-{{ end }}
+{{- end }}
