--- a/charts/mysqldump/templates/secret-gcp.yaml
+++ b/charts/mysqldump/templates/secret-gcp.yaml
@@ -10,6 +10,6 @@ metadata:
 type: Opaque
 stringData:
   {{ .Values.upload.googlestoragebucket.secretFileName }}: {{ .Values.upload.googlestoragebucket.jsonKeyfile | quote }}
-{{ end }}
-{{ end }}
-{{ end }}
+{{- end }}
+{{- end }}
+{{- end }}
