--- a/charts/fluentd-elasticsearch/Chart.yaml
+++ b/charts/fluentd-elasticsearch/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: fluentd-elasticsearch
-version: 14.0.0
+version: 15.0.0
 appVersion: v5.0.2
 type: application
 home: https://www.fluentd.org/
@@ -18,6 +18,4 @@ sources:
 - https://github.com/fluent/fluentd-kubernetes-daemonset
 - https://github.com/GoogleCloudPlatform/fluent-plugin-detect-exceptions
 - https://github.com/kubernetes/kubernetes/tree/master/cluster/addons/fluentd-elasticsearch/fluentd-es-image
-maintainers:
-- name: monotek
-  email: monotek23@gmail.com
+deprecated: true
