--- a/charts/mysqldump/Chart.yaml
+++ b/charts/mysqldump/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-version: 7.0.1
-appVersion: v3.2.13
+version: 7.0.2
+appVersion: v3.2.17
 description: A Helm chart to help backup MySQL databases using mysqldump
 name: mysqldump
 keywords:
@@ -19,6 +19,6 @@ maintainers:
 type: application
 dependencies:
   - name: mariadb
-    version: 20.4.2
-    repository: "https://charts.bitnami.com/bitnami"
+    version: 24.0.0
+    repository: oci://registry-1.docker.io/bitnamicharts
     condition: mariadb.enabled
