--- a/charts/visual-regression-tracker/values.yaml
+++ b/charts/visual-regression-tracker/values.yaml
@@ -41,6 +41,11 @@ vrtComponents:
       pullPolicy: IfNotPresent
       tag: "5.0.11"
 
+    # Additional environment variables for the API container
+    extraEnv: []
+      # - name: STATIC_SERVICE
+      #   value: "s3"
+
     ingress:
       enabled: false
       className: ""
@@ -226,6 +231,11 @@ serviceAccount:
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: ""
+
+# Additional environment variables for the API container
+extraEnv: []
+# - name: STATIC_SERVICE
+#   value: "s3"
 
 # dependency chart config
 postgresql:
