feat(vrt): add PostgreSQL image repository configuration
Signed-off-by: Serhii Hontarenko <serhii.hontarenko@amo.tech>

--- a/charts/visual-regression-tracker/values.yaml
+++ b/charts/visual-regression-tracker/values.yaml
@@ -234,6 +234,8 @@ serviceAccount:
 
 # dependency chart config
 postgresql:
+  image:
+    repository: bitnamilegacy/postgresql
   auth:
     database: vrt
     username: vrt
